# atlas-generator-linux

./: .gitignore  AtlasPacker.cc  AtlasPacker.h  CMakeLists.txt  CONTRIBUTING.md  Configuration.cc  Configuration.h  DataExport.h  JsonExport.cpp  JsonExport.h  README.md  Utils.cc  Utils.h  atlas-generator.pro  atlasConfig  main.cc
CRC32/: CRC32.cpp  CRC32.h
RectangleBinPack/: GuillotineBinPack.cpp  GuillotineBinPack.h  MaxRectsBinPack.cpp  Rect.cpp  ShelfBinPack.cpp  SkylineBinPack.cpp
deploy/: deploy.sh
